@@ -8,7 +8,7 @@ IT(info)[BD(:)"Axis label"BD(:)][BD(:=)"prefix"BD(:)][\fB:,\fP"unit label"BD(:)]
 The IT(info) string is made up of one or more concatenated substrings of the form
 [BD(a)|BD(f)|BD(g)]IT(stride)[+-IT(phase)][IT(unit)].
 The leading BD(a) is used to specify the annotation and major tick spacing [Default], BD(f) for minor tick spacing, and
-BD(g) for gridline spacing.
+BD(g) for gridline spacing (when IT(stride) in omitted, gridline spacing is the same as the annotation spacing).
 IT(stride) is the desired stride interval. 
 The optional IT(phase) shifts the annotation interval by that amount (positive or negative).
 The optional IT(unit) indicates the unit of the IT(stride) and can be any of
