@@ -1,5 +1,5 @@
 -----------------------------------------------------------------------------------------
-	$Id: ChangeLog,v 1.1109 2011-06-21 22:14:06 remko Exp $
+	$Id: ChangeLog,v 1.1110 2011-06-21 23:29:39 remko Exp $
 -----------------------------------------------------------------------------------------
 
 2011-06-21	jluis
@@ -17,8 +17,10 @@
 	* gmt_init.c:		Redesign gmt_decode_tinfo in advance of allowing empties.
 	* *.c:			Removed axis items GMT_INTV_UPPER and GMT_INTV_LOWER (interval
 				annotation is determined by 'type' in GMT_PLOT_AXIS_ITEM struct).
-	* gmt_map.c:		Added GMT_auto_frame_interval to determine frame when left blank.
+	* gmt_map.c:		Added GMT_auto_frame_interval to determine annotation, tick and
+				grid interval when left blank.
 	* psscale_func.c:	---"---
+	* explain_-B_full.txt:	Explain new use of -Bafg.
 
 2011-06-20	remko
 	* gmt_notunix.h:	Only define PATH_SEPARATOR (as char), not also PATH_DELIM.
